<resources>
    <string name="app_name">TrnqlChallenge</string>
    <string name="fb_app_id">455988501255208</string>
    <string name="dog_name">Dog\'s Name</string>
    <string name="your_dog_name">Your Dog\'s Name</string>
    <string name="your_dog_breed">Your Dog\'s Breed</string>
    <string name="your_dog_photo">Your Dog\'s Photo</string>
    <string name="dog_breed">Dog\'s Breed</string>
    <string name="pick_breed">Pick a Breed</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="show_owners_btn">Dog Owners</string>
    <string name="show_vets_btn">Vets</string>
    <string name="show_places_btn">Dog Friendly</string>
    <string name="title_activity_maps">Map</string>
    <string name="picture_upload_btn">Choose picture of your dog</string>
    <string name="settings_btn">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="vets_title">Vets</string>
    <string name="vet_details_title">Vet details</string>
    <string name="switch_contact">Allow Other Dog Owners to Contact Me</string>
    <string name="switch_walk_reminder">Dog Walk Reminder</string>
    <string name="dog_description">Your Dog\'s Name and Breed</string>
    <string name="vet_address_label">Address:</string>
    <string name="friendly_place_address_label">Address</string>
    <string name="vet_city_label">City:</string>
    <string name="vet_phone_label">Phone:</string>
    <string name="friendly_place_phone_label">Phone</string>
    <string name="friendly_place_website_label">Website</string>
    <string name="vet_address">%1$s  %2$s</string>
    <string name="this_dog_photo">A photo of this dog</string>
    <string name="phone_img_description">Phone call</string>
    <string name="your_message">Your Message</string>
    <string name="announce_button">Announce to all</string>
    <string name="no_owners_nearby">No Owners Nearby :(</string>
    <string name="no_vets_nearby">No Vets Nearby :(</string>
    <string name="no_friendly_places_nearby">No Dog Friendly Places Nearby :(</string>
    <string name="send">Send</string>
    <string name="err_message">Please enter your message</string>
    <string name="err_location">Please turn on your location</string>
    <string name="message_sent">Message was sent!</string>
    <string name="announcement_sent">Message announced!</string>
    <string name="pref_contact_label_on">Allow Contact</string>
    <string name="pref_contact_summary_on">Dog owners nearby can message you</string>
    <string name="pref_contact_label_off">Block Contact</string>
    <string name="pref_contact_summary_off">Dog owners nearby can\'t message you</string>
    <string name="btn_set_photo">Set photo</string>
    <string name="btn_switch_photo">Change photo</string>
    <string name="btn_mark_friendly">Mark As Dog Friendly</string>
    <string name="btn_skip">Skip</string>
    <string name="message_from_label">From:</string>
    <string name="message_body_label">Message:</string>
    <string name="btn_reply">Reply</string>
    <string name="inbox_title">Inbox</string>
    <string name="message_title">Message</string>
    <string name="no_messages">There is no messages for you :(</string>
    <string name="desc_place_photo">A photo of this place</string>
    <string name="dog_friendly_places">Dog friendly places</string>
    <string name="friendly_place_details">Dog friendly place</string>
    <string name="gps_off_warning">This app is context-aware. Consider turning your GPS on.</string>
    <string name="btn_gps_skip">Dismiss</string>
    <string name="btn_gps_set">Settings</string>
    <string name="settings_desc">Settings</string>
    <string name="btn_announcements_label">Show Announcements</string>
    <string name="err_announcements">Failed to fetch announcements</string>
    <string name="err_messages">Failed to fetch messages</string>
    <string name="err_photo_upload">Failed to upload photo</string>
    <string name="err_photo_download">Failed to download photo</string>
    <string name="sender_dog_photo">Sender\'s Dog\'s Photo</string>
    <string name="btn_show_profile">Show Profile</string>
    <string name="btn_send_msg">Send Message</string>
    <string name="setup">Setup</string>
    <string name="setup_teaser">Please take a minute to setup your dog\'s profile and let other users recognize you</string>
    <string name="app_logo">App Logo</string>
    <string name="btn_done">Done</string>
    <string name="btn_next">Next</string>
    <string name="sex_m">Male</string>
    <string name="sex_f">Female</string>
    <string name="btn_upload">Upload Photo</string>
    <string name="btn_finish">Finish</string>
    <string-array name="dog_sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="dog_sex_values">
        <item>male</item>
        <item>female</item>
    </string-array>
</resources>
