<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="pref_contact"
        android:switchTextOn="@string/pref_contact_label_on"
        android:switchTextOff="@string/pref_contact_label_off"
        android:summaryOn="@string/pref_contact_summary_on"
        android:summaryOff="@string/pref_contact_summary_off"
        android:defaultValue="true"
        />
    <CheckBoxPreference
        android:key="pref_walk_reminder"
        android:title="@string/pref_walk_reminder_label"
        android:summary="@string/pref_walk_reminder_summary"
        />
    <EditTextPreference
        android:key="pref_name"
        android:title="@string/your_dog_name"
        android:summary=""
        />
    <EditTextPreference
        android:key="pref_breed"
        android:title="@string/your_dog_breed"
        android:summary=""
        />
    <Preference
        android:key="pref_photo"
        android:title="@string/your_dog_photo"
        >
        <intent android:action="android.intent.action.VIEW"
            android:targetPackage="com.technics.trnqlchallenge"
            android:targetClass="com.technics.trnqlchallenge.PhotoActivity" />
    </Preference>
</PreferenceScreen>