<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle"
        android:padding="@dimen/card_action_padding"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="8.5dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/transparent"
            android:onClick="closeSetup"
            android:textColor="@color/colorPrimaryTextInverse"
            android:textAllCaps="true"
            android:text="@string/btn_done"
            />
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="6dp"
            card_view:cardElevation="6dp"
            >
            <TextView android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8.5dp"
                android:paddingBottom="8.5dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/colorPrimaryTextInverse"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:onClick="nextSlide"
                android:text="@string/btn_next"
                />
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <android.support.percent.PercentRelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonPanel"
        android:gravity="center"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/dogBreedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_widthPercent="66%"
            >
            <AutoCompleteTextView
                android:id="@+id/dogBreed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:hint="@string/your_dog_breed"
                android:textColor="@color/colorPrimaryTextInverse"
                />
        </android.support.design.widget.TextInputLayout>
    </android.support.percent.PercentRelativeLayout>
</RelativeLayout>