<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FriendlyPlaceDetailsActivity"
    >
    <TextView
        android:id="@+id/friendlyPlaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/friendlyPlaceAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/friendlyPlaceName"
        android:layout_marginTop="@dimen/details_vertical_margin"
        android:text="@string/friendly_place_address_label"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/friendlyPlaceAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/friendlyPlaceAddressLabel"
        android:layout_marginTop="@dimen/details_vertical_margin"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/friendlyPlacePhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/friendlyPlaceAddress"
        android:layout_marginTop="@dimen/details_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/friendly_place_phone_label"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/friendlyPlacePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/friendlyPlacePhoneLabel"
        android:layout_marginTop="@dimen/details_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/friendlyPlaceWebsiteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/friendlyPlacePhone"
        android:layout_marginTop="@dimen/details_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/friendly_place_website_label"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/friendlyPlaceWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/friendlyPlaceWebsiteLabel"
        android:layout_marginTop="@dimen/details_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:autoLink="web"
        android:visibility="gone"
        />
</RelativeLayout>
