<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    card_view:cardCornerRadius="@dimen/card_corner"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true"
    android:layout_marginBottom="@dimen/details_vertical_margin"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/contentArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/announcementCreatorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/card_title_size"
                    android:layout_marginTop="6dp"
                    />
                <TextView
                    android:id="@+id/announcementBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/announcementCreatorName"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_marginTop="12dp"
                    />
            </RelativeLayout>
            <com.parse.ParseImageView
                android:id="@+id/announcementCreatorPhoto"
                android:layout_width="@dimen/card_small_photo_width"
                android:layout_height="@dimen/card_small_photo_height"
                android:contentDescription="@string/sender_dog_photo"
                android:scaleType="centerCrop"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/contentArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:buttonBarStyle"
            android:gravity="start"
            android:padding="@dimen/card_action_padding"
            >
            <Button
                android:id="@+id/btn_owner_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_show_profile"
                style="?android:attr/borderlessButtonStyle"
                android:background="@android:color/transparent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="@dimen/card_action_padding"
                android:layout_marginEnd="@dimen/card_action_padding"
                />
            <Button
                android:id="@+id/btn_send_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_send_msg"
                style="?android:attr/borderlessButtonStyle"
                android:background="@android:color/transparent"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>