<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OwnerDetailsActivity"
    android:background="@drawable/purple"
    >
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="@dimen/card_corner"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/contentArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                >
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:id="@+id/dogName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/card_title_size"
                        android:layout_marginTop="6dp"
                        android:text="Dog Name"
                        />
                    <TextView
                        android:id="@+id/dogBreed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dogName"
                        android:textColor="@color/colorSecondaryText"
                        android:layout_marginTop="12dp"
                        android:text="Dog Breed"
                        />
                </RelativeLayout>
                <com.parse.ParseImageView
                    android:id="@+id/announcementCreatorPhoto"
                    android:layout_width="@dimen/card_large_photo_width"
                    android:layout_height="@dimen/card_large_photo_height"
                    android:adjustViewBounds="true"
                    android:layout_weight="1"
                    android:contentDescription="@string/sender_dog_photo"
                    android:src="@drawable/silhouette"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_below="@id/contentArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="?android:buttonBarStyle"
                android:gravity="right"
                android:padding="@dimen/card_action_padding"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_show_profile"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@android:color/transparent"
                    android:layout_marginRight="@dimen/card_action_padding"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_reply"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorAccent"
                    />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
